<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1f"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:text="@string/library_name"
        android:textAlignment="center"
        android:textColor="#9e9e9e"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="157dp"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="257dp"
        android:backgroundTint="#a4dc84"
        android:text="@string/login_librarian_btn"
        android:textColor="#000000"
        android:onClick="librarianLoginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="163dp"
        android:backgroundTint="#a4dc84"
        android:text="@string/login_student_btn"
        android:textColor="#000000"
        android:onClick="studentLoginBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginStart="105dp"
        android:layout_marginBottom="118dp"
        android:backgroundTint="#1f1f1f1f"
        android:text="@string/signup_student_btn"
        android:textColor="#FFFFFF"
        android:onClick="studentSignupBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>