<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="#1f1f1f">

    <RelativeLayout
        android:id="@+id/layout_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#1f1f1f"
        android:padding="8dp">



        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:ellipsize="end"
            android:textColor="#9e9e9e"
            android:maxLines="1"
            android:text="@string/author"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author"
            android:ellipsize="end"
            android:textColor="#9e9e9e"
            android:maxLines="1"
            android:text="@string/category"/>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category"
            android:textColor="#9e9e9e"
            android:text="@string/quantity"/>

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/category"
            android:textColor="#9e9e9e"
            android:layout_toRightOf="@id/quantity_text"
            android:text="1"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text=" "
            tools:ignore="HardcodedText" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>